cambios package json node
se creó el proyecto en node, y se agregó el comando start

Signed-off-by: cisarLZamora <leazamorace@outlook.com>

--- a/src/HTML/chess.html
+++ b/src/HTML/chess.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/css/chess.css">
+    <link rel="stylesheet" href="../css/chess.css">
     <title>Cisa games</title>
-    <link rel="icon" href="src/img/ajedrez.png">
+    <link rel="icon" href="../img/ajedrez.png">
 </head>
 <body>
     <div class="container">
@@ -115,6 +115,6 @@
             <p>H</p>
         </div>
     </div>
-    <script src="src/js/main-chess.js"></script>
+    <script src="../js/main-chess.js"></script>
 </body>
 </html>
